favorites svg veranderen script

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13,6 +13,7 @@
 /* ========== ROOT & THEME ========== */
 :root {
   --regular-font: "Inter";
+  --cursive-font: "Kapakana";
   --bold-font: "Inter-Bold";
   --color-bg: #fff;
   --color-fg: #000;
