--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13,7 +13,6 @@
 /* ========== ROOT & THEME ========== */
 :root {
   --regular-font: "Inter";
-  --cursive-font: "Kapakana";
   --bold-font: "Inter-Bold";
   --color-bg: #fff;
   --color-fg: #000;
@@ -88,7 +87,7 @@ li {
   border: 0;
 }
 
-/* ========== HEADER & NAV ========== */
+/* ========== HEADER ========== */
 header {
   display: flex;
   align-items: center;
@@ -102,9 +101,9 @@ header {
   height: auto;
 }
 
-header h1 {
+nav h1 {
   font-size: 36px;
-  padding-left: 2rem;
+  padding-left: 1rem;
 }
 
 img {
@@ -129,9 +128,10 @@ body.blog-page .navigation-logo {
 }
 
 .navigation-menu {
+  display: flex;
+  flex-direction: column;
   align-items: center;
-  gap: 6rem;
-  padding-right: 3rem;
+  gap: 1rem;
 }
 
 /* ========== THEME BUTTON ========== */
@@ -224,13 +224,13 @@ body.blog-page .navigation-logo {
 }
 
 .hero-logo {
-    max-width: 23rem;
-    min-width: 10rem;
+    max-width: 15rem;
+    min-width: 5rem;
     height: auto;
 }
 
 .hero-title {
-  font-size: clamp(5rem, 15.5vw, 10rem);
+  font-size: clamp(4rem, 15vw, 10rem);
   text-align: left;
   padding-left: 0;
 }
@@ -242,11 +242,8 @@ body.blog-page .navigation-logo {
 
 .grid-container {
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: auto auto auto;
-  padding: 0 4rem;
-  gap: 4rem;
-  align-items: center;
+  grid-template-columns: 1fr;
+  gap: 2rem;
 }
 
 .grid-item.text {
@@ -395,4 +392,52 @@ body.blog-page .navigation-logo {
 .article-content {
   font-size: 1rem;
   line-height: 1.6;
+}
+
+/* ========== MEDIA QUERIES ========== */
+@media (min-width: 700px) {
+  .hero-title {
+    font-size: clamp(5rem, 15.5vw, 10rem);
+  }
+
+  .hero-logo {
+    max-width: 23rem;
+    min-width: 10rem;
+    height: auto;
+  }
+
+  .navigation-menu {
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 6rem;
+    padding-right: 3rem;
+  }
+
+  .grid-container {
+    grid-template-columns: 1fr 1fr;
+    padding: 0 2rem;
+  }
+
+  .blog-posts {
+    grid-template-columns: repeat(2, 1fr);
+    padding: 2rem;
+  }
+}
+
+@media (min-width: 1024px) {
+  .blog-posts {
+    grid-template-columns: repeat(3, 1fr);
+    padding: 2rem 6rem;
+  }
+
+  .grid-container {
+    padding: 0 6rem;
+  }
+
+  .blog-categories {
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 0 6rem;
+  }
 }
