--- a/views/partials/layout.liquid
+++ b/views/partials/layout.liquid
@@ -15,6 +15,9 @@
           <img src="/assets/logo/logo_red.svg" alt="Logo" class="logo" width="48" height="48">
           <h1>SHKAF</h1>
         </div>
+
+        <button class="mobile-menu-toggle">menu</button>
+
         <ul class="navigation-menu">
           <li><a href="/blog">Blog</a></li>
           <li><a href="/about">About me</a></li>
