--- a/public/css/style.css
+++ b/public/css/style.css
@@ -127,11 +127,38 @@ body.blog-page .navigation-logo {
   visibility: visible;
 }
 
+.mobile-menu-toggle {
+  display: block;
+  background: none;
+  border: none;
+  font-size: 1rem;
+  text-decoration: underline;
+  cursor: pointer;
+  z-index: 1001;
+}
+
 .navigation-menu {
-  display: flex;
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100%;
+  background-color: var(--color-bg);
   flex-direction: column;
+  justify-content: center;
   align-items: center;
-  gap: 1rem;
+  gap: 3rem;
+  transform: translateY(-100%);
+  transition: transform 0.3s ease-in-out;
+  z-index: 1000;
+  pointer-events: none;
+  opacity: 0;
+}
+
+.navigation-menu.open {
+  transform: translateY(0);
+  pointer-events: all;
+  opacity: 1;
 }
 
 /* ========== THEME BUTTON ========== */
@@ -396,6 +423,23 @@ body.blog-page .navigation-logo {
 
 /* ========== MEDIA QUERIES ========== */
 @media (min-width: 700px) {
+  .mobile-menu-toggle {
+    display: none;
+  }
+
+  .navigation-menu {
+    position: static;
+    height: auto;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    opacity: 1;
+    gap: 6rem;
+    padding-right: 3rem;
+    pointer-events: auto;
+    transform: none;
+  }
+
   .hero-title {
     font-size: clamp(5rem, 15.5vw, 10rem);
   }
@@ -404,14 +448,6 @@ body.blog-page .navigation-logo {
     max-width: 23rem;
     min-width: 10rem;
     height: auto;
-  }
-
-  .navigation-menu {
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    gap: 6rem;
-    padding-right: 3rem;
   }
 
   .grid-container {
