--- a/public/css/style.css
+++ b/public/css/style.css
@@ -390,6 +390,22 @@ body.blog-page .navigation-logo {
   margin: 2rem;
 }
 
+.favorites-empty {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 5rem;
+  text-align: center;
+  gap: 2rem;
+}
+
+.empty-text {
+  font-size: 1.2rem;
+  color: #888;
+  font-style: italic;
+}
+
+
 /* ========== ARTICLE PAGE ========== */
 .article-page {
   max-width: 800px;
