--- a/public/css/style.css
+++ b/public/css/style.css
@@ -227,10 +227,15 @@ body.blog-page .navigation-logo {
   width: 80%;
 }
 
-.submit.blog {
-  width: 10rem;
-  margin-top: 4rem;
+.discover-button {
+  display: flex;
   justify-content: center;
+  margin: 5rem 0 5rem;
+}
+
+.submit.blog {
+  justify-content: center;
+  white-space: nowrap;
 }
 
 /* ========== LANDING PAGE ========== */
@@ -476,14 +481,24 @@ body.blog-page .navigation-logo {
   }
 
   .grid-container {
+    display: grid;
     grid-template-columns: 1fr 1fr;
-    padding: 0 2rem;
+    gap: 4rem;
+    padding: 4rem 6rem;
   }
+  
+  .grid-item {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  
 
   .blog-posts {
     grid-template-columns: repeat(2, 1fr);
     padding: 2rem;
   }
+
 }
 
 @media (min-width: 1024px) {
