--- a/public/css/style.css
+++ b/public/css/style.css
@@ -105,29 +105,58 @@ header {
   height: auto;
 }
 
-nav h1 {
-  font-size: 36px;
-  padding-left: 1rem;
-}
-
 img {
     width: 100%;
 }
 
 nav {
-  display: flex;
-  justify-content: space-between;
+  position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
-  padding: 0 1rem;
+  height: 6rem;
+  background-color: var(--color-bg);
 }
 
-.navigation-logo {
-  visibility: hidden;
+nav h1 {
+  font-size: 36px;
+  padding-left: 1rem;
+}
+
+nav .nav-bar {
+  position: relative;
+  height: 100%;
+  width: 100%;
+  margin: 0 auto;
+  max-width: 1380px;
+  padding: 0 2rem;
   display: flex;
   align-items: center;
+  justify-content: space-between;
 }
 
-body.blog-page .navigation-logo {
+.nav-links {
+  position: fixed;
+  top: 0;
+  right: 0;
+  height: 100vh;
+  width: 100%;
+  background-color: var(--color-bg);
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  transform: translateX(100%); 
+  transition: transform 0.4s ease-in-out, opacity 0.4s ease-in-out;
+  z-index: 1000;
+  pointer-events: none;
+  opacity: 0;
+  visibility: hidden;
+}
+
+.nav-links.open {
+  transform: translateX(0);  
+  pointer-events: all;
+  opacity: 1;
   visibility: visible;
 }
 
@@ -141,28 +170,40 @@ body.blog-page .navigation-logo {
   z-index: 1001;
 }
 
-.navigation-menu {
-  position: fixed;
-  top: 0;
-  left: 0;
-  height: 100vh;
-  width: 100%;
-  background-color: var(--color-bg);
-  flex-direction: column;
-  justify-content: center;
+.nav-logo a {
+  visibility: hidden;
+  display: flex;
   align-items: center;
-  gap: 3rem;
-  transform: translateY(-100%);
-  transition: transform 0.3s ease-in-out;
-  z-index: 1000;
-  pointer-events: none;
-  opacity: 0;
 }
 
-.navigation-menu.open {
-  transform: translateY(0);
-  pointer-events: all;
-  opacity: 1;
+body.blog-page .nav-logo a {
+  visibility: visible;
+}
+
+@media (min-width: 700px) {
+
+  .nav-links {
+    position: relative;
+    height: auto;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
+    opacity: 1;
+    gap: clamp(1rem, 7vw, 10rem);
+    padding-left: 3rem;
+    pointer-events: auto;
+    transform: none;
+    transition: none;
+    visibility: visible;
+  }
+
+  .nav-links li {
+    white-space: nowrap;
+  }
+
+  .mobile-menu-toggle {
+    display: none;
+  }
 }
 
 /* ========== THEME BUTTON ========== */
@@ -256,7 +297,7 @@ body.blog-page .navigation-logo {
     box-sizing: border-box;
     padding: 5rem 1rem 15rem 1rem;
     max-width: 1200px;
-    margin: 0 auto;
+    margin: 5rem;
 }
 
 .hero-logo {
@@ -447,28 +488,6 @@ body.blog-page .navigation-logo {
 
 /* ========== MEDIA QUERIES ========== */
 @media (min-width: 700px) {
-  .navigation-menu {
-    position: relative;
-    height: auto;
-    flex-direction: row;
-    justify-content: flex-end;
-    align-items: center;
-    opacity: 1;
-    gap: 6rem;
-    padding-right: 3rem;
-    padding-left: 3rem;
-    pointer-events: auto;
-    transform: none;
-    transition: none;
-  }
-
-  .navigation-menu li {
-    white-space: nowrap;
-  }
-
-  .mobile-menu-toggle {
-    display: none;
-  }
 
   .hero-title {
     font-size: clamp(5rem, 15.5vw, 10rem);
