--- a/views/partials/layout.liquid
+++ b/views/partials/layout.liquid
@@ -11,19 +11,25 @@
   <body class="{{ bodyClass }}">
     <header>
       <nav>
-        <div class="navigation-logo">
-          <img src="/assets/logo/logo_red.svg" alt="Logo" class="logo" width="48" height="48">
-          <h1>SHKAF</h1>
+        <div class="nav-bar">
+          <div class="nav-logo">
+            <a href="/">
+              <img src="/assets/logo/logo_red.svg" alt="Logo" class="logo" width="48" height="48">
+              <h1>SHKAF</h1>
+            </a>
+          </div>
+
+          {% comment %} <button class="mobile-menu-toggle">menu</button> {% endcomment %}
+
+          <div class="menu">
+            <ul class="nav-links">
+              <li><a href="/blog">Blog</a></li>
+              <li><a href="/about">About me</a></li>
+              <li><a href="/contact">Contact</a></li>
+              <li><a href="/favorites">Your favorites</a></li>
+            </ul>
+          </div>
         </div>
-
-        <button class="mobile-menu-toggle">menu</button>
-
-        <ul class="navigation-menu">
-          <li><a href="/blog">Blog</a></li>
-          <li><a href="/about">About me</a></li>
-          <li><a href="/contact">Contact</a></li>
-          <li><a href="/favorites">Your favorites</a></li>
-        </ul>
       </nav>
     </header>
 
