--- a/public/css/style.css
+++ b/public/css/style.css
@@ -42,6 +42,7 @@
 
 html {
   font-family: var(--regular-font);
+  view-transition-name: default;
 }
 
 body {
@@ -126,7 +127,7 @@ nav {
   top: 0;
   left: 0;
   width: 100%;
-  height: 6rem;
+  height: 6.5rem;
 }
 
 nav h1 {
