--- a/views/partials/blog-content.liquid
+++ b/views/partials/blog-content.liquid
@@ -34,3 +34,8 @@
     </article>
   {% endfor %}
 </section>
+<div class="cross-container">
+  <img class="cross-img" src="/assets/images/cross1.png" alt="Fashion gif 3">
+  <img class="cross-img" src="/assets/images/cross2.png" alt="Fashion gif 3">
+  <img class="cross-img" src="/assets/images/cross3.png" alt="Fashion gif 3">
+</div>
