--- a/views/partials/landing-content.liquid
+++ b/views/partials/landing-content.liquid
@@ -4,6 +4,12 @@
     <h1 class="hero-title">SHKAF</h1>
   </section>
 
+  <div class="cross-container">
+    <img class="cross-img" src="/assets/images/cross1.png" alt="Fashion gif 3">
+    <img class="cross-img" src="/assets/images/cross2.png" alt="Fashion gif 3">
+    <img class="cross-img" src="/assets/images/cross3.png" alt="Fashion gif 3">
+  </div>
+
   <section class="grid-container">
     <div class="grid-item text">
       <h2 class="dynamic-welcome cursive-heading">Welcome dear!</h2>
