--- a/views/partials/layout.liquid
+++ b/views/partials/layout.liquid
@@ -21,8 +21,15 @@
       <nav>
         <div class="nav-bar">
           <div class="nav-logo">
-            <a href="/">
-              <img src="/assets/logo/logo_red.svg" alt="Logo" class="logo" width="48" height="48">
+            <a href="/blog">
+              <img
+                src="/assets/logo/logo_red.svg"
+                alt="Logo"
+                class="logo"
+                width="48"
+                height="48"
+                data-theme-logo
+              >
               <h1>SHKAF</h1>
             </a>
           </div>
