--- a/public/css/style.css
+++ b/public/css/style.css
@@ -127,6 +127,7 @@ nav {
   left: 0;
   width: 100%;
   height: 6.5rem;
+  z-index: 1000;
 }
 
 nav h1 {
@@ -134,7 +135,7 @@ nav h1 {
   padding-left: 1rem;
 }
 
-nav .nav-bar {
+.nav-bar {
   position: relative;
   height: 100%;
   width: 100%;
@@ -148,28 +149,31 @@ nav .nav-bar {
   transition: all 0.3s ease;
 }
 
+.nav-logo a {
+  display: flex;
+  visibility: hidden;
+  align-items: center;
+}
+
+body.blog-page .nav-logo a {
+  visibility: visible;
+}
+
+
 .nav-links {
   position: fixed;
-  top: 0;
-  right: 0;
+  display: flex;
   height: 100vh;
   width: 100%;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  transform: translateX(100%); 
-  transition: transform 0.4s ease-in-out, opacity 0.4s ease-in-out;
-  z-index: 1000;
-  pointer-events: none;
-  opacity: 0;
-  visibility: hidden;
 }
 
-.nav-links.open {
-  transform: translateX(0);  
-  pointer-events: all;
-  opacity: 1;
-  visibility: visible;
+.nav-links li a {
+  display: flex;
+  align-items: center;
+  height: 100%;
 }
 
 .mobile-menu-toggle {
@@ -182,17 +186,16 @@ nav .nav-bar {
   z-index: 1001;
 }
 
-.nav-logo a {
-  visibility: hidden;
-  display: flex;
-  align-items: center;
-}
-
-body.blog-page .nav-logo a {
-  visibility: visible;
-}
-
 @media (min-width: 700px) {
+  /* NAV MENU */
+
+  .nav-bar {
+
+  }
+
+  .menu {
+
+  }
 
   .nav-links {
     position: relative;
@@ -215,8 +218,7 @@ body.blog-page .nav-logo a {
 
   .mobile-menu-toggle {
     display: none;
-  }
-}
+  }}
 
 /* ========== THEME BUTTON ========== */
 
@@ -438,13 +440,16 @@ body.blog-page .nav-logo a {
 }
 
 /* ========== FILTER / CATEGORIES ========== */
+.page-content {
+  padding-top: 6.5rem; 
+}
 
 .categories-container {
   display: flex;
   align-items: center;
   justify-content: left;
   padding-top: 4rem;
-  height: 6rem;
+  height: 5rem;
   width: 100%;
 }
 
@@ -577,6 +582,7 @@ body.blog-page .nav-logo a {
   .blog-posts {
     grid-template-columns: repeat(2, 1fr);
     padding: 2rem;
+    margin-top: 0rem;
   }
 
   .blog-categories {
