--- a/views/partials/blog-content.liquid
+++ b/views/partials/blog-content.liquid
@@ -1,41 +1,43 @@
-<section class="categories-container">
-  <div class="blog-categories">
-    <ul class="categories-list">
-      <li><button data-filter="all">All</button></li>
-      <li><button data-filter="clothes">clothes</button></li>
-      <li><button data-filter="runway">runway</button></li>
-      <li><button data-filter="outerwear">outerwear</button></li>
-      <li><button data-filter="accessories">accessories</button></li>
-      <li><button data-filter="shoes">shoes</button></li>
-    </ul>
+<main class="page-content">
+  <section class="categories-container">
+    <div class="blog-categories">
+      <ul class="categories-list">
+        <li><button data-filter="all">All</button></li>
+        <li><button data-filter="clothes">clothes</button></li>
+        <li><button data-filter="runway">runway</button></li>
+        <li><button data-filter="outerwear">outerwear</button></li>
+        <li><button data-filter="accessories">accessories</button></li>
+        <li><button data-filter="shoes">shoes</button></li>
+      </ul>
+    </div>
+  </section>
+
+  <section class="blog-posts">
+    {% for post in posts %}
+      <article class="blog-post-card" data-category="{{ post.category }}">
+        <img class="post-image" src="{{ post['image-1'] }}" alt="{{ post.title }}" width="48" height="48">
+
+        <section class="post-content">
+          <div class="post-content-left">
+            <h3 class="post-title">{{ post.title | upcase }}</h3>
+            <p class="hashtag">#{{ post.category }}</p>
+          </div>
+
+          <div class="post-content-right">
+            <button class="favorite-btn" data-id="{{ post.id }}">
+              <svg width="24" height="24" class="heart-icon">
+                <use href="#{% if favoriteIds contains post.id %}icon-heart-full{% else %}icon-heart-empty{% endif %}"></use>
+              </svg>
+            </button>
+            <a href="/{{ post.slug }}" class="read-more">read more</a>
+          </div>
+        </section>
+      </article>
+    {% endfor %}
+  </section>
+  <div class="cross-container">
+    <img class="cross-img" src="/assets/images/cross1.png" alt="Fashion gif 3">
+    <img class="cross-img" src="/assets/images/cross2.png" alt="Fashion gif 3">
+    <img class="cross-img" src="/assets/images/cross3.png" alt="Fashion gif 3">
   </div>
-</section>
-
-<section class="blog-posts">
-  {% for post in posts %}
-    <article class="blog-post-card" data-category="{{ post.category }}">
-      <img class="post-image" src="{{ post['image-1'] }}" alt="{{ post.title }}" width="48" height="48">
-
-      <section class="post-content">
-        <div class="post-content-left">
-          <h3 class="post-title">{{ post.title | upcase }}</h3>
-          <p class="hashtag">#{{ post.category }}</p>
-        </div>
-
-        <div class="post-content-right">
-          <button class="favorite-btn" data-id="{{ post.id }}">
-            <svg width="24" height="24" class="heart-icon">
-              <use href="#{% if favoriteIds contains post.id %}icon-heart-full{% else %}icon-heart-empty{% endif %}"></use>
-            </svg>
-          </button>
-          <a href="/{{ post.slug }}" class="read-more">read more</a>
-        </div>
-      </section>
-    </article>
-  {% endfor %}
-</section>
-<div class="cross-container">
-  <img class="cross-img" src="/assets/images/cross1.png" alt="Fashion gif 3">
-  <img class="cross-img" src="/assets/images/cross2.png" alt="Fashion gif 3">
-  <img class="cross-img" src="/assets/images/cross3.png" alt="Fashion gif 3">
-</div>
+</main>
