--- a/views/login.liquid
+++ b/views/login.liquid
@@ -14,7 +14,14 @@
         <div class="nav-bar">
           <div class="nav-logo">
             <a href="/" style="visibility: visible;">
-              <img src="/assets/logo/logo_red.svg" alt="Logo" class="logo" width="48" height="48">
+              <img
+                src="/assets/logo/logo_red.svg"
+                alt="Logo"
+                class="logo"
+                width="48"
+                height="48"
+                data-theme-logo
+              >
               <h1>SHKAF</h1>
             </a>
           </div>
