--- a/views/partials/article-content.liquid
+++ b/views/partials/article-content.liquid
@@ -1,4 +1,4 @@
-<main class="article-page">
+<main class="page-content">
   <article class="article-detail">
     <h1 class="article-title">{{ blog.title }}</h1>
 
