--- a/views/partials/favorites-content.liquid
+++ b/views/partials/favorites-content.liquid
@@ -1,4 +1,4 @@
-<main class="favorites-page">
+<main class="page-content">
   <h1 class="favorites-title">Your favorites</h1>
 
   {% if posts.size > 0 %}
