--- a/views/partials/blog-content.liquid
+++ b/views/partials/blog-content.liquid
@@ -15,7 +15,9 @@
   <section class="blog-posts">
     {% for post in posts %}
       <article class="blog-post-card" data-category="{{ post.category }}">
-        <img class="post-image" src="{{ post['image-1'] }}" alt="{{ post.title }}" width="48" height="48">
+        <a href="/{{ post.slug }}">
+          <img class="post-image" src="{{ post['image-1'] }}" alt="{{ post.title }}" width="48" height="48">
+        </a>
 
         <section class="post-content">
           <div class="post-content-left">
