Categorie “All” standaard actief gemaakt bij pagina-lading
Issue #21

- “All” categorie krijgt nu active class in HTML
- JavaScript voert automatisch filtering uit bij pagina-lading

--- a/views/partials/blog-content.liquid
+++ b/views/partials/blog-content.liquid
@@ -2,7 +2,7 @@
   <section class="categories-container">
     <div class="blog-categories">
       <ul class="categories-list">
-        <li><button data-filter="all">All</button></li>
+        <li><button data-filter="all" class="active">All</button></li>
         <li><button data-filter="clothes">clothes</button></li>
         <li><button data-filter="runway">runway</button></li>
         <li><button data-filter="outerwear">outerwear</button></li>
