--- a/views/partials/layout.liquid
+++ b/views/partials/layout.liquid
@@ -34,10 +34,10 @@
             </a>
           </div>
 
-          {% comment %} <button class="mobile-menu-toggle">menu</button> {% endcomment %}
+          <button class="mobile-menu-toggle" id="menu-toggle">menu</button>
 
           <div class="menu">
-            <ul class="nav-links">
+            <ul class="nav-links" id="nav-links">
               <li><a href="/blog">Blog</a></li>
               <li><a href="/about">About me</a></li>
               <li><a href="/contact">Contact</a></li>
