--- a/views/partials/article-content.liquid
+++ b/views/partials/article-content.liquid
@@ -1,15 +1,17 @@
 <main class="page-content">
   <article class="article-detail">
+    <a href="/blog" class="go-back">&larr; go back</a>
+
     <h1 class="article-title">{{ blog.title }}</h1>
 
+    <p class="article-category">#{{ blog.category }}</p>
+    <p class="article-description">{{ blog.content }}</p>
+
     <div class="article-images">
-      <img src="{{ blog['image-1'] }}" alt="{{ blog.title }} afbeelding 1" width="20" height="auto">
+      <img src="{{ blog['image-1'] }}" alt="{{ blog.title }} afbeelding 1">
       {% if blog['image-2'] %}
-        <img src="{{ blog['image-2'] }}" alt="{{ blog.title }} afbeelding 2" width="20" height="auto">
+        <img src="{{ blog['image-2'] }}" alt="{{ blog.title }} afbeelding 2">
       {% endif %}
     </div>
-
-    <p class="article-category">#{{ blog.category }}</p>
-    <p class="article-content">{{ blog.content }}</p>
   </article>
 </main>
